--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -84,6 +84,7 @@
     <ClCompile Include="..\..\ApocalypseStudios\ApocalypseEngine\AE\PicoPNG.cpp" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Error.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Loader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainGame.cpp" />
@@ -96,6 +97,7 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Error.h" />
     <ClInclude Include="GLTexture.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="Loader.h" />
     <ClInclude Include="MainGame.h" />
     <ClInclude Include="Asset.h" />
