--- a/PlatformGame/PlatformGame.vcxproj
+++ b/PlatformGame/PlatformGame.vcxproj
@@ -145,11 +145,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainGame.cpp" />
     <ClCompile Include="StaticShader.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bullet.h" />
     <ClInclude Include="MainGame.h" />
     <ClInclude Include="StaticShader.h" />
   </ItemGroup>
