Created new screen system.  Haven't moved platform game to system yet

--- a/ApocalypseEngine/ApocalypseEngine.vcxproj
+++ b/ApocalypseEngine/ApocalypseEngine.vcxproj
@@ -154,11 +154,13 @@
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="BaseLight.cpp" />
     <ClCompile Include="Loader.cpp" />
+    <ClCompile Include="IMainGame.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="PhysicsCore.cpp" />
     <ClCompile Include="picoPNG.cpp" />
     <ClCompile Include="Rectangle.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="ScreenList.cpp" />
     <ClCompile Include="ShaderProgram.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="SpriteBatch.cpp" />
@@ -176,14 +178,17 @@
     <ClInclude Include="DebugRenderer.h" />
     <ClInclude Include="Error.h" />
     <ClInclude Include="GLTexture.h" />
+    <ClInclude Include="IGameScreen.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="BaseLight.h" />
     <ClInclude Include="Loader.h" />
+    <ClInclude Include="IMainGame.h" />
     <ClInclude Include="Model.h" />
     <ClInclude Include="PhysicsCore.h" />
     <ClInclude Include="picoPNG.h" />
     <ClInclude Include="Rectangle.h" />
     <ClInclude Include="ResourceManager.h" />
+    <ClInclude Include="ScreenList.h" />
     <ClInclude Include="ShaderProgram.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="SpriteBatch.h" />
