--- a/PlatformGame/PlatformGame.vcxproj
+++ b/PlatformGame/PlatformGame.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Box.cpp" />
     <ClCompile Include="GameScreen.cpp" />
+    <ClCompile Include="LightShader.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="StaticShader.cpp" />
@@ -156,6 +157,7 @@
     <ClInclude Include="App.h" />
     <ClInclude Include="Box.h" />
     <ClInclude Include="GameScreen.h" />
+    <ClInclude Include="LightShader.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="StaticShader.h" />
   </ItemGroup>
